monitor/grafana-mcp/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-mcp-basic-auth

spec:
  basicAuth:
    secret: grafana-mcp-basic-auth
