monitor/grafana-mcp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-mcp

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: grafana-mcp
